# disutility-of-uncertainty

./: .gitignore  CLAUDE.md  MYST_DEPLOYMENT_GUIDE.md  Makefile  README.md  REPRODUCING.md  pyproject.toml  sim.ipynb  simulated_referee_reports.md
.github/workflows/: ci.yml  deploy-preview.yml
notes/: llm_replication_rees_jones.md
paper/: ._config.yml.bak  ._toc.yml.bak  REFRAME_NOTES.md  _config.yml  index.md  myst.yml  references.bib
paper/chapters/: baseline_results.ipynb  calibration.md  conclusion.md  data_appendix.md  discussion.md  empirical_approach.md  empirical_estimates.ipynb  extensions.md  introduction.md  literature_review.md  model.md  policy_implications.md  policyengine_analysis.ipynb  real_data_analysis.ipynb  reproduce_stylized_results.ipynb  results.md  robustness.md  stylized_results.md  technical_appendix.md  theoretical_framework.ipynb  theory_walkthrough.ipynb
results/demo/: block1_bias_loss.csv  block2_uncertainty_loss.csv  block3_two_worker_welfare.csv  block4_opt_tax_vs_sd.csv  summary.json
results/smoke/: block2_uncertainty_loss.csv  block3_two_worker_welfare.csv  block4_opt_tax_vs_sd.csv  summary.json
scripts/: README.md  run_analysis.py
src/taxuncertainty/: __init__.py  pipeline.py  results.py
src/taxuncertainty/analysis/: calibration.py  empirical.py  uncertainty.py  welfare.py
src/taxuncertainty/data/: parameters.yaml  policyengine_integration.py  results.json
src/taxuncertainty/models/: labor.py  planner.py  preferences.py  utility.py
tests/: __init__.py  test_empirical.py  test_labor.py  test_pipeline.py  test_planner.py  test_preferences.py  test_uncertainty.py  test_utility.py  test_welfare.py
