[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxuncertainty"
version = "0.1.0"
description = "Analyzing welfare effects of tax rate uncertainty using economic models"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Max Ghenis"},
]
license = {text = "MIT"}
keywords = ["economics", "taxation", "uncertainty", "welfare", "labor supply"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "policyengine-us>=0.700.0",
    "jupyter-book>=0.15.0",
    "sphinx>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.19.0",
    "isort>=5.10.0",
]

research = [
    "jupyterlab>=3.4.0",
    "notebook>=6.4.0",
    "ipywidgets>=7.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/taxuncertainty --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
